# scripts

./: .gitignore  README.md
do-clang-format/: README.md  pyproject.toml
do-clang-format/src/do_clang_format/: __init__.py  main.py
